# Interactive-Real-Time-Exercise-Monitoring-System-with-Visual-and-Audio-Feedback-

./: App.tsx  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
exercises/: curl.lua  exercises.7z  gambe.lua  tronco.lua
src/: camera.rs  main.rs  yolo.rs
