[package]
name = "actionq-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
motion = { path = "../actionq-motion" }

tungstenite = "0.23.0"
nokhwa = { version = "0.10.0", features = ["input-native"] }
ort = { version = "=2.0.0-rc.9", features = ["cuda"] }
show-image = "0.14.1"
imageproc = "0.25.0"
ndarray = "0.16"
glam = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
bincode = "1.3.3"
clap = { version = "4.5.36", features = ["derive"] }
serde_json = "1.0.140"
